# env2lgt

./: .gitignore  LICENSE  README.md  environment-da2.yml  environment-dap.yml  environment.yml  launch.cmd  pyproject.toml  requirements-da2.txt  requirements-dap.txt  requirements.txt
docs/: DAP_BACKEND_PLAN.md  README.md
env2lgt/: __init__.py  app.py  bake.py  cli.py  color.py  colorchecker.py  exposure.py  proj.py  project.py
env2lgt/depth/: __init__.py  base.py  da2_runner.py  dap_runner.py
env2lgt/io/: __init__.py  exr.py  tonemap.py
env2lgt/lights/: __init__.py  detect.py  extract.py  inpaint.py
env2lgt/ui/: __init__.py  exposure_panel.py  light_panel.py  theme.py  viewer.py
env2lgt/usd/: lightrig.py  mesh.py
scripts/: batch_bake.py  da2_infer.py  dap_infer.py
