[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "env2lgt"
version = "0.0.1"
description = "Convert HDRI latlong panoramas into USD light rigs (rect area lights + dome + depth mesh) using DA-2 panorama depth estimation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "mexxmillion" }]
license = { text = "Apache-2.0" }
keywords = ["vfx", "hdri", "usd", "openusd", "lighting", "panorama", "depth-estimation"]

# Runtime deps for the UI/USD/EXR side only. DA-2 lives in a sibling conda env
# (env2lgt-da2) and is invoked via subprocess from env2lgt.depth.da2_runner.
# The conda env is the source of truth for binary deps (openusd, pyside6,
# OpenEXR, OpenImageIO, opencv, scipy, numpy). These pip pins are kept loose
# so `pip install -e .` works inside the conda env without a fight.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
env2lgt = "env2lgt.app:main"
env2lgt-bake = "env2lgt.cli:main"

[tool.setuptools.packages.find]
include = ["env2lgt*"]

[tool.ruff]
line-length = 110
target-version = "py311"
