[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "env2lgt"
version = "0.1.0"
description = "Convert HDRI latlong panoramas into USD light rigs (rect area lights + dome + depth mesh) with panorama-aware depth estimation, OCIO colour management, and CC24 / region-pair / NLE-style auto colour matching against a reference image."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Maung Maung Hla Win", email = "mexxmillion@gmail.com" },
]
maintainers = [
    { name = "Maung Maung Hla Win", email = "mexxmillion@gmail.com" },
]
license = { text = "Apache-2.0" }
keywords = [
    "vfx", "hdri", "usd", "openusd", "lighting", "panorama",
    "depth-estimation", "colour-matching", "color-matching", "ocio", "aces",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

# Runtime deps for the UI/USD/EXR side only. DA-2 lives in a sibling conda env
# (env2lgt-da2) and is invoked via subprocess from env2lgt.depth.da2_runner.
# The conda env is the source of truth for binary deps (openusd, pyside6,
# OpenEXR, OpenImageIO, opencv, scipy, numpy). These pip pins are kept loose
# so `pip install -e .` works inside the conda env without a fight.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/mexxmillion/env2lgt"
Source = "https://github.com/mexxmillion/env2lgt"
Issues = "https://github.com/mexxmillion/env2lgt/issues"

[project.scripts]
env2lgt = "env2lgt.app:main"
env2lgt-bake = "env2lgt.cli:main"

[tool.setuptools.packages.find]
include = ["env2lgt*"]

[tool.ruff]
line-length = 110
target-version = "py311"
